@@ -2,6 +2,8 @@ Changes between 2.2.4 and 2.2.5.dev
 -----------------------------------
 
 - fix issue128: show captured output when capsys/capfd are used
+- pluginmanager.register(...) now raises ValueError if the
+  plugin has been already registered or the name is taken
 
 Changes between 2.2.3 and 2.2.4
 -----------------------------------
